kubernetes/infrastructure/observability/tempo/install/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tempo
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: tempo
      app.kubernetes.io/name: tempo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - port: 3200
          protocol: TCP
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
